# TrainSet

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
conf/: always.conf  everysec.conf  no.conf  none.conf
data_simple/: appendonly.aof
include/: aof.h  config.h  config_loader.h  kv.h
src/: CMakeLists.txt  aof.cpp  config_loader.cpp  kv.cpp  server.cpp
src/include/: aof.h  config.h  config_loader.h  kv.h  log.h  rdb.h  replicate_client.h  resp.h  server.h
